--- a/lib/HTTP/MobileUserID/Nihongo.pod
+++ b/lib/HTTP/MobileUserID/Nihongo.pod
@@ -10,7 +10,7 @@ HTTP::MobileUserID::Nihongo - 携帯端末のユーザIDを取得する
   use HTTP::MobileAgent;
   
   my $agent  = HTTP::MobileAgent->new;
-  my $userid = HTTP::MobildUserID->new($agent);
+  my $userid = HTTP::MobileUserID->new($agent);
   
   if ( $userid->supported ) {
     print $userid->id;
